--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: flask-app
     env: python
     buildCommand: ""
-    startCommand: gunicorn app:app
+    startCommand: python3 -m src.bot
     plan: free
