--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ discord.py==2.5.2
 dotenv==0.9.9
 Flask==3.1.1
 frozenlist==1.7.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 multidict==6.4.4
+packaging==25.0
 propcache==0.3.2
 python-dotenv==1.1.0
 Werkzeug==3.1.3
