--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ aiohttp==3.12.12
 aiosignal==1.3.2
 attrs==25.3.0
 blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.2.1
 discord==2.3.2
 discord.py==2.5.2
 dotenv==0.9.9
 Flask==3.1.1
 frozenlist==1.7.0
+geographiclib==2.0
 gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
@@ -18,5 +21,7 @@ multidict==6.4.4
 packaging==25.0
 propcache==0.3.2
 python-dotenv==1.1.0
+requests==2.32.4
+urllib3==2.4.0
 Werkzeug==3.1.3
 yarl==1.20.1
